# FdF

./: .Makefile.swo  .Makefile.swp  .gitignore  .test.c.swp  CMakeLists.txt  Makefile  Makefile2  README.md  fdf  outpu  output  sho.sh
includes/: .FdF.swp  .fdf.h.swl  .fdf.h.swm  .fdf.h.swn  .fdf.h.swo  .fdf.h.swp  fdf.h
srcs/: .drw_line.c.swm  .drw_line.c.swn  .drw_line.c.swo  .drw_line.c.swp  .ft_cntwrd.c.swp  .ft_iswhtsp.c.swp  .get_pixel_arr.c.swn  .get_pixel_arr.c.swo  .get_pixel_arr.c.swp  .get_point_arr.c.swn  .get_point_arr.c.swo  .get_point_arr.c.swp  .main.c.swl  .main.c.swm  .main.c.swn  .main.c.swo  .main.c.swp  .main2.c.swp  .mov_X.c.swo  .mov_X.c.swp  .mov_Y.c.swo  .mov_Y.c.swp  .mov_Z.c.swo  .mov_Z.c.swp  .print_fdf.c.swp  .pxl_new.c.swp  CMakeLists.txt  add_color.c  apply.c  change_clr_val.c  colorize.c  drw_line.c  drw_line_bras.c  exit_fdf.c  fdf  ft_cntwrd.c  ft_countchr.c  ft_iswhtsp.c  ft_strjoin_free.c  get_list.c  (+24 more)
test_maps/: .trash.swp  42.fdf  pyramide.fdf  trash
