cmake_minimum_required(VERSION 3.9)
project(FdF)

set(CMAKE_CXX_STANDARD 11)

add_executable(FdF
        includes/fdf.h
        libft/author
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_list_at.c
        libft/ft_list_find.c
        libft/ft_list_last.c
        libft/ft_list_push_back.c
        libft/ft_list_push_front.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/libft.h
        minilibx_macos/man/man3/mlx.1
        minilibx_macos/man/man3/mlx_loop.1
        minilibx_macos/man/man3/mlx_new_image.1
        minilibx_macos/man/man3/mlx_new_window.1
        minilibx_macos/man/man3/mlx_pixel_put.1
        minilibx_macos/_README_
        minilibx_macos/font.c
        minilibx_macos/font.xcf
        minilibx_macos/Makefile
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        srcs/cmake-build-debug/cmake_install.cmake
        srcs/cmake-build-debug/CMakeCache.txt
        srcs/cmake-build-debug/Makefile
        srcs/cmake-build-debug/srcs.cbp
        srcs/CMakeLists.txt
        srcs/drw_line.c
        srcs/ft_countchr.c
        srcs/ft_strjoin_free.c
        srcs/get_pixel_arr.c
        srcs/get_point_arr.c
        srcs/main.c
        srcs/main2.c
        srcs/print_fdf.c
        srcs/pxl_new.c
        test_maps/10-2.fdf
        test_maps/10-70.fdf
        test_maps/100-6.fdf
        test_maps/20-60.fdf
        test_maps/42.fdf
        test_maps/50-4.fdf
        test_maps/basictest.fdf
        test_maps/elem.fdf
        test_maps/mars.fdf
        test_maps/pentenegpos.fdf
        test_maps/plat.fdf
        test_maps/pnp_flat.fdf
        test_maps/pylone.fdf
        test_maps/pyra.fdf
        test_maps/pyramide.fdf
        test_maps/trash
        author
        fdf
        Makefile
        README.md)
