cmake_minimum_required(VERSION 3.9)
project(FdF)

set(CMAKE_CXX_STANDARD 11)

add_executable(FdF
        includes/fdf.h
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_bzero.c
        libft/ft_cntchr.c
        libft/ft_cntwrd.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_iswhsp.c
        libft/ft_itoa.c
        libft/ft_list_at.c
        libft/ft_list_count.c
        libft/ft_list_find.c
        libft/ft_list_last.c
        libft/ft_list_push_back.c
        libft/ft_list_push_front.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap_int.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/libft.h
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        srcs/add_color.c
        srcs/apply.c
        srcs/colorize.c
        srcs/drw_line_bras.c
        srcs/get_pixel_arr.c
        srcs/get_point_arr.c
        srcs/init_rot_mat.c
        srcs/main.c
        srcs/mult_matr.c
        srcs/print_fdf.c
        srcs/rotate.c
        srcs/scale.c
        srcs/sub_color.c
        srcs/transform.c
        test_maps/1.fdf
        test_maps/10-2.fdf
        test_maps/10-70.fdf
        test_maps/100-6.fdf
        test_maps/20-60.fdf
        test_maps/42.fdf
        test_maps/50-4.fdf
        test_maps/basictest.fdf
        test_maps/elem-col.fdf
        test_maps/elem-fract.fdf
        test_maps/elem.fdf
        test_maps/elem2.fdf
        test_maps/fdf
        test_maps/IGN_Reunion_MNT250_ASC_OCEAN0_XXL.fdf
        test_maps/julia.fdf
        test_maps/mars.fdf
        test_maps/pentenegpos.fdf
        test_maps/plat.fdf
        test_maps/pnp_flat.fdf
        test_maps/pylone.fdf
        test_maps/pyra.fdf
        test_maps/pyramide.fdf
        test_maps/t1.fdf
        test_maps/t2.fdf
        test_maps/trash
        CMakeLists.txt
        Makefile
        output)
